# oj-eval-codex-035-20260401021300

./: .gitignore  CMakeLists.txt
include/: MyString.hpp
src/: main.cpp
